# plugin_manager_lib

./: Cargo.toml
src/: lib.rs
