[package]
name = "plugin_manager_lib"
version = "0.1.1"
edition = "2021"
authors = ["banchen19@outlook.com>"]
description = "This is dependencies libloader build plugin manager"
repository = "https://github.com/MC-PMA/plugin_manager_lib"
keywords = ["plugin", "plugin_manager_lib","libloader"]
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
libloader="0.1.4"
serde = { version = "1.0", features = ["derive"] }